[ruby/prism] Fix modifier rescue pattern matching

[Bug #21713]

https://github.com/ruby/prism/commit/02c944c055